<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".giris_ekrani">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            tools:layout_editor_absoluteY="-3dp"
            android:background="@android:color/holo_blue_light"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout3">

        <TextView android:layout_width="220dp"
                  android:layout_height="wrap_content"
                  android:text="@string/yan_nda_ki_eczac"
                  android:textColor="@android:color/white"
                  android:textSize="25sp"
                  android:layout_marginTop="20dp"
                  android:id="@+id/baslik"
                  android:layout_marginStart="15dp"
        />

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            tools:layout_editor_absoluteX="-56dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginTop="12dp"
            android:id="@+id/linearLayout4">

        <Button android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="100dp"
                android:id="@+id/ilacAdı"
                android:text="@string/ila_ad_ile_arama"
                android:background="@drawable/radius_button"
                android:textColor="@android:color/white"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="333dp"
            tools:layout_editor_absoluteX="2dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="1dp"
                android:layout_marginStart="100dp"
                android:id="@+id/barkodArama"
                android:text="@string/barkod_ile_arama"
                android:background="@drawable/radius_button"
                android:textColor="@android:color/white"
        />
        <TextView android:layout_width="240dp"
                  android:layout_height="20dp"
                  android:text="@string/bu_uygulama_bilgilendirme_ama_l_d_r"
                  android:layout_gravity="center"
                  android:layout_marginTop="50dp"
        />
        <TextView android:layout_width="280dp"
                  android:layout_height="wrap_content"
                  android:text="@string/doktor_kontrol_d_nda_ila_kullanmay_n_z"
                  android:layout_gravity="center"

        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>